Creation of a phonegap plugin for the store of preferences in android preferences storage. The serachSuggestionsProvider use it for provide suggestions in the wikipedia's selected language.

--- a/res/xml/plugins.xml
+++ b/res/xml/plugins.xml
@@ -27,4 +27,5 @@
     <plugin name="ApplicationVersion" value="org.wikipedia.ApplicationVersion"/>
     <plugin name="GlobalizationCommand" value="com.phonegap.plugins.globalization.GlobalizationCommand"/>
     <plugin name="WebIntent" value="com.borismus.webintent.WebIntent"/>
+    <plugin name="Preferences" value="org.wikipedia.PreferencesPlugin"/>
 </plugins>
